Expresiones Binarias terminadas para la generacion de codigo